Note that the values of U_k for k in [1,23] are already saved in ./data folder.

--- a/print_U_k.Rmd
+++ b/print_U_k.Rmd
@@ -29,7 +29,7 @@ library(kableExtra)
 
 # Variables to modify
 smallest_prime_to_consider <- 2
-max_k <- 15 # Max k for which to find U_k
+max_k <- 23 # Max k for which to find U_k
 max_prime <- 200 # max prime to consider
 
 ```
@@ -46,6 +46,7 @@ source("functions.R")
 ```{r, echo=FALSE}
 
 # Find U_k for each k in [1:max_k] and make a plot
+# The values of U_k for k in [1,23] are saved in ./data. To read them: readRDS('data/up_to_u_23')
 set_of_union_of_sets_of_lengths <- find_set_of_union_of_sets_of_lengths(max_k)
 
 max_length <- length(set_of_union_of_sets_of_lengths[[length(set_of_union_of_sets_of_lengths)]])
